[package]
name = "apextestsuite"
version = "0.1.0"
authors = ["Max Lichtenegger <maximilian.lichtenegger@kapsch.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.1"
chrono = "0.4.10"
timer = "0.2.0"
getopts = "0.2"

[badges]
travis-ci = { repository = "gulaschsuppm/rust-json-client", branch = "master" }
codecov = { repository = "gulaschsuppm/rust-json-client", branch = "master", service = "github" }
